--- a/index.html
+++ b/index.html
@@ -247,6 +247,9 @@ $(document).ready(function () {
 <li>
   <a href="TT_CaseStudy1.html">Case Study 1</a>
 </li>
+<li>
+  <a href="TT_CaseStudy1.html">Case Study 2</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
