--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ $(document).ready(function () {
   <a href="TT_CaseStudy1.html">Case Study 1</a>
 </li>
 <li>
-  <a href="TT_CaseStudy1.html">Case Study 2</a>
+  <a href="https://github.com/ttoth76/CaseStudy2DDS/blob/main/Tamas_Toth_MSDS_6306_CaseStudy2.html">Case Study 2</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
